# BDAgent

./: .gitignore  README.md  merchant.db  pyproject.toml  test.db
.github/workflows/: ci.yml
src/merchant/: crew.py  main.py
src/merchant/config/: agents.yaml  tasks.yaml
src/merchant/tools/: google_trend_tool.py  website_traffic_tool.py
src/merchant/web/: main.py
src/merchant/web/api/: agents.py  auth.py  users.py
src/merchant/web/models/: base.py  customer.py  email.py  user.py
src/merchant/web/routes/: __init__.py  auth.py  customers.py  email.py  pages.py
src/merchant/web/schemas/: agent.py  auth.py  customer.py  email.py  user.py
src/merchant/web/services/: agent_service.py  email_service.py
src/merchant/web/templates/: dashboard.html  login.html  register.html
src/merchant/web/utils/: auth.py  email.py
tests/: conftest.py  test_163_imapclient.py  test_auth.py  test_crew.py  test_email.py  test_email_service.py  test_users.py
