[project]
name = "merchant"
version = "0.1.0"
description = "merchant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "firecrawl-py>=1.15.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "emails>=0.6.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.5.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
merchant = "merchant.main:run"
run_crew = "merchant.main:run"
train = "merchant.main:train"
replay = "merchant.main:replay"
test = "merchant.main:test"
web = "merchant.web.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "pytest-mock>=3.12.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
